--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       href="https://fonts.googleapis.com/css?family=Montserrat:400,700"
       rel="stylesheet"
     />
+
+    <!-- Here shared.css is general hence it is written first so that it can be overwritten -->
+
+    <link rel="stylesheet" href="shared.css" />
     <link rel="stylesheet" href="main.css" />
   </head>
 
@@ -45,7 +49,7 @@
       <section id="plans">
         <h1 class="section-title">Choose Your Plan</h1>
 
-        <div>
+        <div class="plan__list">
           <article class="plan">
             <h1 class="plan__title">FREE</h1>
             <h2 class="plan__price">$0/month</h2>
