--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <!-- This is very very important for changing physical to css pixels -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>uHost</title>
     <link rel="shortcut icon" href="favicon.png" />
     <link
