--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </div>
     
     <header class="main-header">
-      <div>
+      <div class="mobile-logo-container">
         <button class="toggle-button">
           <span class="toggle-button__bar"></span>
           <span class="toggle-button__bar"></span>
