--- a/packages/index.html
+++ b/packages/index.html
@@ -19,7 +19,7 @@
     <div class="backdrop"></div>
     <div class="background"></div>
     <header class="main-header">
-      <div>
+      <div class="mobile-logo-container">
         <button class="toggle-button">
           <span class="toggle-button__bar"></span>
           <span class="toggle-button__bar"></span>
