--- a/start-hosting/index.html
+++ b/start-hosting/index.html
@@ -17,7 +17,7 @@
   <body>
     <div class="backdrop"></div>
     <header class="main-header">
-      <div>
+      <div class="mobile-logo-container">
         <button class="toggle-button">
           <span class="toggle-button__bar"></span>
           <span class="toggle-button__bar"></span>
