Preloaded images for faster access

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       rel="stylesheet"
     />
 
+    <link rel="preload" href="/images/freedom.jpg" as="image">
+
     <!-- Here shared.css is general hence it is written first so that it can be overwritten -->
 
     <link rel="stylesheet" href="shared.css" />
