--- a/customers/index.html
+++ b/customers/index.html
@@ -10,6 +10,10 @@
       href="https://fonts.googleapis.com/css?family=Anton|Montserrat:400,700"
       rel="stylesheet"
     />
+
+    <link rel="preload" href="../images/customer-1.jpg" as="image" />
+
+    <link rel="preload" href="../images/customer-2.jpg" as="image" />
     <link rel="stylesheet" href="../shared.css" />
     <link rel="stylesheet" href="customers.css" />
   </head>
