--- a/packages/index.html
+++ b/packages/index.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>uHost Packages</title>
     <link rel="shortcut icon" href="../favicon.png" />
+    <!-- <link rel="preload" href="style.css" as="image"> -->
 
     <link
       href="https://fonts.googleapis.com/css?family=Montserrat:400,700"
       rel="stylesheet"
     />
+    <link rel="preload" href="../images/plans-background.jpg" as="image" />
+
     <link rel="stylesheet" href="../shared.css" />
     <link rel="stylesheet" href="packages.css" />
   </head>
